Fix DropdownList positioning on mobile

--- a/src/components/dropdown-list/dropdown-list.scss
+++ b/src/components/dropdown-list/dropdown-list.scss
@@ -30,7 +30,7 @@ gtx-dropdown-content {
     display: block;
     min-width: 100px;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: auto;
     opacity: 1;
     will-change: width, height;
 
